--- a/pom.xml
+++ b/pom.xml
@@ -1,36 +1,29 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!--
+Copyright by  Zoltán Cseresnyés, Ruman Gerst
+Research Group Applied Systems Biology - Head: Prof. Dr. Marc Thilo Figge
+https://www.leibniz-hki.de/en/applied-systems-biology.html
+HKI-Center for Systems Biology of Infection
+Leibniz Institute for Natural Product Research and Infection Biology - Hans Knöll Institute (HKI)
+Adolf-Reichwein-Straße 23, 07745 Jena, Germany
 
+This code is licensed under MIT
+See the LICENSE file provided with this code for the full license.
+-->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
     <groupId>org.hkijena</groupId>
-    <artifactId>jipipe-launcher</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>pom-jipipe-launcher</artifactId>
+    <version>1.0.0</version>
     <name>jipipe-launcher</name>
     <description>JIPipe Launcher</description>
-    <inceptionYear>2024</inceptionYear>
     <url>https://www.jipipe.org/</url>
+    <inceptionYear>2024</inceptionYear>
     <organization>
         <name>Leibniz Institute for Natural Product Research and Infection Biology - Hans Knöll Institute (HKI)</name>
         <url>https://www.leibniz-hki.de/</url>
     </organization>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <license.licenseName>bsd_2</license.licenseName>
-        <license.copyrightOwners>N/A</license.copyrightOwners>
-        <license.projectName>JIPipe-Launcher</license.projectName>
-        <releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
-    </properties>
-    <issueManagement>
-        <system>GitHub Issues</system>
-        <url>https://github.com/applied-systems-biology/jipipe/issues</url>
-    </issueManagement>
-    <ciManagement>
-        <system>GitHub CI</system>
-        <url>https://github.com/applied-systems-biology/jipipe</url>
-    </ciManagement>
     <licenses>
         <license>
             <name>MIT</name>
@@ -67,25 +60,138 @@
         </mailingList>
     </mailingLists>
     <scm>
-        <connection>scm:git:https://github.com/applied-systems-biology/jipipe-launcher</connection>
-        <developerConnection>scm:git:https://github.com/applied-systems-biology/jipipe-laucher</developerConnection>
+        <connection>scm:git:https://github.com/applied-systems-biology/jipipe</connection>
+        <developerConnection>scm:git:https://github.com/applied-systems-biology/jipipe</developerConnection>
         <tag>HEAD</tag>
-        <url>https://github.com/applied-systems-biology/jipipe-launcher</url>
+        <url>https://github.com/applied-systems-biology/jipipe</url>
     </scm>
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/applied-systems-biology/jipipe/issues</url>
+    </issueManagement>
+    <ciManagement>
+        <system>GitHub CI</system>
+        <url>https://github.com/applied-systems-biology/jipipe</url>
+    </ciManagement>
+
     <parent>
-        <groupId>org.scijava</groupId>
-        <artifactId>pom-scijava</artifactId>
-        <version>37.0.0</version>
-        <relativePath/>
+        <groupId>org.hkijena</groupId>
+        <artifactId>pom-jipipe</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+        <relativePath />
     </parent>
+
     <repositories>
         <repository>
             <id>imagej.public</id>
             <url>https://maven.imagej.net/content/groups/public</url>
         </repository>
     </repositories>
+
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>26.0-jre</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.12.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.12.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.9</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>1.7.9</version>
+            </dependency>
+            <dependency>
+                <groupId>org.swinglabs</groupId>
+                <artifactId>swingx</artifactId>
+                <version>1.6.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vladsch.flexmark</groupId>
+                <artifactId>flexmark</artifactId>
+                <version>0.62.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vladsch.flexmark</groupId>
+                <artifactId>flexmark-ext-tables</artifactId>
+                <version>0.62.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vladsch.flexmark</groupId>
+                <artifactId>flexmark-ext-toc</artifactId>
+                <version>0.62.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vladsch.flexmark</groupId>
+                <artifactId>flexmark-ext-autolink</artifactId>
+                <version>0.62.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vladsch.flexmark</groupId>
+                <artifactId>flexmark-pdf-converter</artifactId>
+                <version>0.62.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vladsch.flexmark</groupId>
+                <artifactId>flexmark-util</artifactId>
+                <version>0.62.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jgrapht</groupId>
+                <artifactId>jgrapht-core</artifactId>
+                <version>1.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jgrapht</groupId>
+                <artifactId>jgrapht-io</artifactId>
+                <version>1.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jfree</groupId>
+                <artifactId>jfreechart</artifactId>
+                <version>1.5.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jfree</groupId>
+                <artifactId>jfreesvg</artifactId>
+                <version>3.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>0.9.12</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.trove4j</groupId>
+                <artifactId>trove4j</artifactId>
+                <version>3.0.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.vatbub</groupId>
+                <artifactId>mslinks</artifactId>
+                <version>1.0.5</version>
+            </dependency>
             <dependency>
                 <groupId>org.hkijena</groupId>
                 <artifactId>jipipe-core</artifactId>
@@ -93,11 +199,42 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <dependencies>
         <dependency>
-            <groupId>org.hkijena</groupId>
-            <artifactId>jipipe-core</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <license.licenseName>bsd_2</license.licenseName>
+        <license.copyrightOwners>N/A</license.copyrightOwners>
+        <license.projectName>JIPipe</license.projectName>
+        <releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
+
+        <!-- Versions -->
+        <jipipe.version>${project.version}</jipipe.version>
+    </properties>
+
+    <modules>
+        <module>jipipe-launcher-common</module>
+        <module>jipipe-launcher-app</module>
+    </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc-plugin.version}</version>
+                <configuration>
+                    <failOnError>false</failOnError>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
