--- a/jipipe-launcher-installer/pom.xml
+++ b/jipipe-launcher-installer/pom.xml
@@ -7,11 +7,11 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>jipipe-launcher-app</artifactId>
+    <artifactId>jipipe-launcher-installer</artifactId>
     <version>1.0.0</version>
 
-    <name>jipipe-launcher-app</name>
-    <description>JIPipe Launcher Application</description>
+    <name>jipipe-launcher-installer</name>
+    <description>JIPipe Launcher Installer Application</description>
     <inceptionYear>2024</inceptionYear>
     <url>https://www.jipipe.org/</url>
 
@@ -82,7 +82,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <license.licenseName>bsd_2</license.licenseName>
         <license.copyrightOwners>N/A</license.copyrightOwners>
-        <license.projectName>jipipe-launcher-app</license.projectName>
+        <license.projectName>jipipe-launcher-installer</license.projectName>
     </properties>
 
     <build>
@@ -94,33 +94,20 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.5.2</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
                 <executions>
                     <execution>
+                        <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>shade</goal>
+                            <goal>single</goal>
                         </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.hkijena.jipipe.launcher.ui.MainWindow</mainClass>
-                                </transformer>
-                            </transformers>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                        <exclude>junit:junit</exclude>
-                                        <exclude>org.apache.maven:lib:tests</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
