--- a/jipipe-launcher-installer/pom.xml
+++ b/jipipe-launcher-installer/pom.xml
@@ -105,7 +105,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.hkijena.jipipe.launcher.ui.MainWindow</mainClass>
+                                    <mainClass>org.hkijena.jipipe.launcher.installer.MainWindow</mainClass>
                                 </transformer>
                             </transformers>
                             <filters>
